force-app/main/default/objects/Account/fields/AccountPoolStyle__c.field-meta.xml
<CustomField>
    <fullName>AccountPoolStyle__c</fullName>
    <label>所属公海</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>华北</fullName>
            </value>
            <value>
                <fullName>华东</fullName>
            </value>
            <value>
                <fullName>华南</fullName>
            </value>
            <value>
                <fullName>公司</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>