force-app/main/default/objects/Account/fields/BackReason__c.field-meta.xml
<CustomField>
    <fullName>BackReason__c</fullName>
    <label>退回公海原因</label>
    <length>255</length>
    <type>Text</type>
</CustomField>