force-app/main/default/objects/Account/fields/HighSeasData__c.field-meta.xml
<CustomField>
    <fullName>HighSeasData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>公海池数据</label>
    <type>Checkbox</type>
</CustomField>