force-app/main/default/objects/Account/fields/LastFollowDate__c.field-meta.xml
<CustomField>
    <fullName>LastFollowDate__c</fullName>
    <label>上次跟进时间</label>
    <type>DateTime</type>
</CustomField>