force-app/main/default/objects/Account/fields/Latest_Contact_Day__c.field-meta.xml
<CustomField>
    <fullName>Latest_Contact_Day__c</fullName>
    <formula>TODAY() -  DATEVALUE(LastFollowDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>距离上次跟进天数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>