force-app/main/default/objects/Account/fields/Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>Refund_Date__c</fullName>
    <label>退回日期</label>
    <type>DateTime</type>
</CustomField>