force-app/main/default/objects/Account/fields/Wechat__c.field-meta.xml
<CustomField>
    <fullName>Wechat__c</fullName>
    <label>微信ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>